--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ header{
 .logo{
 	width: 160px;
 	height: 40px;
-	background-color: grey;
+	background-image: url('../imagens/logo.png');
 	float: left;
 }
 
